Added button for change of themes "Dark-Light"

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </div>
       <button id="generate-quote">Сгенерировать цитату</button>
     </div>
+    <button id="theme-toggle" class="theme-toggle">🌙</button>
     <script src="script.js"></script>
   </body>
 </html>
